src/styles/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

:root {
    --verde-principal: #00C853;
    --cinza-escuro: #212121;
    --branco: #ffffff;
    --preto-suave: #333333;

    --font-titulos: 'montserrat', sans-serif;
    --font-textos: 'open sans', sans-serif;
}

body {
    font-family: var(--font-textos);
    background-color: var(--branco);
    color: var(--preto-suave);
}

#cabecalho {
    background-color: var(--verde-principal);
    color: var(--branco);
    padding: 10px 20px;
}

.navbar {
    display: flex;
    flex-direction: row;
    align-items: center;
}

#container-logo-nav {
    display: flex;
    align-items: center;
    justify-content: center;
    margin-right: 10px;
    background-color: var(--branco);
    border-radius: 50%;
}

#marca-container {
    display: flex;
    flex-direction: row;
}

#marca {
    font-size: 1.8rem;
}

#logo-nav {
    width: 50px;
    height: auto;
}

.navbar a {
    color: var(--branco);
    text-decoration: none;
    font-weight: 550;
}

.navbar ul {
    list-style: none;
    display: flex;
    gap: 20px;
    margin-left: auto;
    flex-wrap: wrap;
}

.navbar li {
    transition: transform .2s;
}

.navbar li:hover {
    transform: translateY(1px);
}

.navbar li:active {
    text-decoration: underline;
}

#btn-carrinho {
    margin-left: 60px;
    margin-right: 10px;
    width: 50px;
    height: 50px;
    border: none;
    border-radius: 10px;
    background-color: #f3f3f3;
    cursor: pointer;
    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.385);
    transition: transform .2s ease, box-shadow .2s ease;
}

#btn-carrinho:hover {
    transform: scale(1.1);
    box-shadow: 3px 2px 6px rgba(0, 0, 0, 0.495);
}

#carrinho_icon {
    display: inline-block;
}

@keyframes carrinhoSaindo {
    0% {
        transform: translateX(0);
    }

    30% {
        transform: translateX(100px);
        opacity: 0;
    }

    60% {
        opacity: 0;
        transform: translateX(-50px);
    }

    100% {
        transform: translateX(0);
    }
}

#carrinho_icon.ativo {
    animation: carrinhoSaindo 1s cubic-bezier(0.4, 0, 0.2, 1);
}

